related to issue #10: cleaner way to get the small datasets for testing, without beforeall and afterall; removing statics from most of test classes; make logger private static final when they are not.